--- a/DotNetCoreSqlDb/DotNetCoreSqlDb.csproj
+++ b/DotNetCoreSqlDb/DotNetCoreSqlDb.csproj
@@ -6,6 +6,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
