--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "defaultConnection": "Server=(localdb)\\mssqllocaldb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "defaultConnection": "Server=msdocs-core-sql-tutorial-onp-server.mysql.database.azure.com;Database=msdocs-core-sql-tutorial-onp-database;Port=3306;User Id=rihltqpfqd;Password=24Q6N3YCE2641E1X$;SSL Mode=Required"
   }
 } 
